--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     </dependencies>
 
     <build>
+        <finalName>chaosblade-exec-cplus</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
